--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -9,6 +9,6 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
       - name: Build the Docker image
-      - run: docker-compose up -d
+        uses: actions/checkout@v3
+        run: docker-compose up -d
