--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,5 +1,4 @@
 name: Docker Image CI
-
 on:
   push:
     branches: [ "main" ]
@@ -9,6 +8,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Build the Docker image
+      - 
+        name: Build the Docker image
         uses: actions/checkout@v3
         run: docker-compose up -d
