--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -11,4 +11,6 @@ jobs:
       - 
         name: Build the Docker image
         uses: actions/checkout@v3
+      - 
+        name: Run the Docker image
         run: docker-compose up -d
