--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,4 +13,4 @@ jobs:
         uses: actions/checkout@v3
       - 
         name: Run the Docker image
-        run: docker/docker-compose up -d
+        run: cd docker; docker-compose up -d
