--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,4 +16,5 @@ jobs:
         run: cd docker; docker-compose up -d
       - 
         name: Test
-        run: docker run --network container:app http://localhost:4000/
+        run: docker run --network container:app --rm appropriate/curl -s --retry 10 --retry-connrefused http://localhost:4000/
+        
