--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,4 +16,4 @@ jobs:
         run: cd docker; docker-compose up -d
       - 
         name: Test
-        run: docker run --network container:app --rm appropriate/curl:lastest -s http://localhost:4000/
+        run: docker run --network container:app --rm appropriate/curl:latest -s http://localhost:4000/
