--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -10,4 +10,4 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Run the Docker image
-        run: cd docker; docker-compose -f "docker-compose.yml" up -d --build; cd..
+        run: cd docker;docker-compose -f up -d --build
