--- a/app/package.json
+++ b/app/package.json
@@ -4,13 +4,14 @@
   "description": "web site for independent photographer",
   "main": "index.js",
   "scripts": {
-    "dev": "http-server",
+    "dev": "http-server & sass --watch sass/test.scss css/test.css",
     "lint": "eslint scripts/**/*.js"
   },
   "author": "Piard Sylvian",
   "license": "ISC",
   "dependencies": {
     "eslint": "^8.25.0",
-    "http-server": "^14.1.0"
+    "http-server": "^14.1.0",
+    "sass": "^1.55.0"
   }
 }
