--- a/app/package.json
+++ b/app/package.json
@@ -4,7 +4,7 @@
   "description": "web site for independent photographer",
   "main": "index.js",
   "scripts": {
-    "dev": "http-server & sass --watch sass/test.scss css/test.css",
+    "dev": "http-server & sass --watch sass/main.scss css/style.css",
     "lint": "eslint scripts/**/*.js"
   },
   "author": "Piard Sylvian",
